package com.chaostensor.video_notes_to_wiki.entity;

public enum LlmStatus {
    PENDING,
    PROCESSING,
    COMPLETED,
    FAILED
}