package com.chaostensor.video_notes_to_wiki.entity;

import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.data.annotation.Id;
import org.springframework.data.relational.core.mapping.Table;
import java.time.LocalDateTime;
import java.util.UUID;

@Table("wiki")
@Data
@NoArgsConstructor
@AllArgsConstructor
public class Wiki {

    @Id
    private UUID id;
    private UUID transcriptId;
    private String result;
    private LocalDateTime createdAt;
    private LocalDateTime updatedAt;
}